--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,10 @@ body {
   border-bottom: 1px #f5f6fa solid;
 }
 
+.Nav:hover {
+  color: darkorange;
+}
+
 h2 {
   font-family: var(--montseratt);
   font-size: 1.875rem;
