--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,33 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;600;700&family=Roboto+Slab:wght@300;400;500;700&display=swap");
 
-:root {
-  --montseratt: system-ui, -apple-system, blinkmacsystemfont, 'Segoe UI', roboto, oxygen, ubuntu, cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  --roboto-slab: 'Roboto Slab', serif;
+* {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: inherit;
 }
 
 body {
+  padding: 4%;
+  background-color: #f5f6fa;
+}
+
+#root {
   margin: 0;
-  background-color: #fafbfc;
-  overflow-x: hidden;
-  box-sizing: border-box;
+  padding: 0 0 8% 0;
+  border-radius: 4px;
+  box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.05);
+  background-color: #fafafa;
+}
+
+.App {
+  width: 100%;
+  height: 100%;
+}
+
+.container {
+  width: 100%;
+  padding: 4%;
 }
