--- a/src/App.css
+++ b/src/App.css
@@ -11,14 +11,14 @@ a {
 
 body {
   padding: 4%;
-  background-color: #f5f6fa;
+  background-color: #ffffff;
 }
 
 #root {
   margin: 0;
   padding: 0 0 8% 0;
   border-radius: 4px;
-  box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: 0 0 60px 0 rgba(219, 158, 158, 0.05);
   background-color: #fafafa;
 }
 
